# homeassistant-delonghi-pinguino-pac-n

./: LICENSE  README.md  hacs.json  pyproject.toml
brand/: LICENSE
custom_components/delonghi_pinguino_pac_n/: __init__.py  climate.py  config_flow.py  const.py  manifest.json  strings.json
custom_components/delonghi_pinguino_pac_n/protocol/: delonghi_pinguino_pac_n.py  pronto.py
custom_components/delonghi_pinguino_pac_n/translations/: en.json
