[project]
name = "homeassistant-delonghi-pinguino-pac-n"
version = "0.1.0"
description = ""
authors = [
    {name = "Konstantin Köhring",email = "konsti@galaxy102.de"}
]
requires-python = ">=3.14.2,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "homeassistant (==2026.6.4)",
    "infrared-protocols (==6.3.0)"
]
